OO-3715: support optional task in the group task course element